INOA-197 Add check for watthour in translator